--- a/src/main/resources/static/styles/fragments/table-global.css
+++ b/src/main/resources/static/styles/fragments/table-global.css
@@ -1,11 +1,12 @@
+@import url("./action.css");
+
 /* Estilo da tabela */
 table {
     width: 100%;
     height: 100%;
     table-layout: auto;
     border-collapse: collapse;
-    margin: auto;
-}
+} 
 
 thead {
     background-color: #007bff;
