--- a/src/main/resources/templates/candidatures/fragments/actions.html
+++ b/src/main/resources/templates/candidatures/fragments/actions.html
@@ -16,5 +16,5 @@
     <a class="btn btn-danger button-action"  
     th:href="@{/candidature/cancel/{id}(id=${candidature.id})}"
     th:if="${#authorization.expression('hasRole(''ROLE_STUDENT'')')} "
-    >Cancelar Candidatura</a> <!-- Aluno Cancela sua candidatura  -->
+    >Cancelar</a> <!-- Aluno Cancela sua candidatura  -->
 </div>
