inicio melhorias no Header

--- a/src/main/resources/static/styles/fragments/header.css
+++ b/src/main/resources/static/styles/fragments/header.css
@@ -108,7 +108,7 @@ nav ul li a {
     display: block;
 }
 
-.dropdown-link {
+.dropdown-header-item {
     color: white;
     padding: 8px 12px;
     text-decoration: none;
@@ -116,7 +116,7 @@ nav ul li a {
     transition: background 0.3s ease;
 }
 
-.dropdown-link:hover {
+.dropdown-header-item:hover {
     background-color: #1abc9c;
 }
 
