--- a/src/main/resources/templates/companies/info.html
+++ b/src/main/resources/templates/companies/info.html
@@ -76,6 +76,12 @@
                 <p class="topic-content" th:text="${company.personContact}">Nome da pessoa de contato</p>
             </div>
         </div>
+
+        <div class="topic">
+            <h1 class="topic-title">Comprovante </h1>
+            <p class="topic-content" th:text="${company.addressProof}"></p>
+        </div>
+        </div>
     </section>
 
     <section class="info-section" id="list-section">
