Páginas de perfis com username na URL
Para dar uma ideia de como seria na vida real, nas redes sociais.

--- a/src/main/resources/templates/companies/fragments/card.html
+++ b/src/main/resources/templates/companies/fragments/card.html
@@ -39,7 +39,7 @@
 
     <div>
         <div class="buttons-actions">
-            <a th:href="@{/company/info/{id}(id=${company.id})}" class="button-action btn-view">
+            <a th:href="@{/company/info/{username}(username=${company.user.username})}" class="button-action btn-view">
                 
                 <i class="bi bi-binoculars-fill"></i>
             </a>
