--- a/src/main/resources/templates/companies/fragments/table.html
+++ b/src/main/resources/templates/companies/fragments/table.html
@@ -26,7 +26,7 @@
             <td th:text="${company.urlPage}">td>
             <td>
                 <div class="buttons-actions">
-                    <button th:href="@{/company/info/{id}(id=${company.id})}" class="button-action btn-view">
+                    <button th:href="@{/company/info/{username}(username=${company.user.username})}" class="button-action btn-view">
                         <i class="bi bi-binoculars-fill"></i></button>
                     <form th:action="@{/company/delete/{id}(id=${company.id})}" method="post">
                         <input type="hidden" name="_method" value="DELETE" />
