correções urgentes nos cards e privando algumas vizualizações

--- a/src/main/resources/static/styles/perfil.css
+++ b/src/main/resources/static/styles/perfil.css
@@ -2,9 +2,13 @@ body {
   background: var(--info-background);
 }
 
+.main-content {
+  padding: 20px 0!important;
+}
+
 .info-section {
   padding: 20px;
-  margin: 1rem;
+  margin: 1rem 0;
   background-color: #f9f9f9;
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
@@ -112,7 +116,9 @@ body {
   margin: 0;
 }
 
-#activity-section, #basic-section, #contact-section {
+#activity-section,
+#basic-section,
+#contact-section {
   text-align: center;
 }
 
@@ -180,14 +186,17 @@ body {
     margin-bottom: 1rem;
   }
 
-  .opportunities-list .offer-card, .list-item {
+  .opportunities-list .offer-card,
+  .list-item {
     flex: 1 1 calc(50% - 20px);
     width: 100%;
   }
 }
 
 @media (max-width: 480px) {
-  .opportunities-list .offer-card, .list-item {
+
+  .opportunities-list .offer-card,
+  .list-item {
     flex: 1 1 100%;
     width: 100%;
   }
