--- a/src/main/resources/templates/companies/info.html
+++ b/src/main/resources/templates/companies/info.html
@@ -4,6 +4,9 @@
 <head>
     <!-- Incluindo o fragmento de cabeçalho -->
     <meta th:insert="~{/fragments/custom-headfiles :: perfil-headfiles(title=${company.fantasyName})}">
+    <link rel="stylesheet" th:href="@{/styles/fragments/card-global.css}">k
+    <link rel="stylesheet" th:href="@{/styles/fragments/action.css}">k
+
 </head>
 
 <body>
