--- a/src/main/resources/static/styles/fragments/card-global.css
+++ b/src/main/resources/static/styles/fragments/card-global.css
@@ -1,5 +1,5 @@
-:root{
-    --gap-father:3px;
+:root {
+    --gap-father: 3px;
 }
 
 .card-list-component {
@@ -20,15 +20,6 @@
     text-align: center;
 }
 
-.individual-card {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 16px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-     width: 100%;
-     height: 500px;
-}
 
 .individual-card h3 {
     margin: 0 0 12px;
@@ -39,10 +30,18 @@
     flex-direction: column;
     justify-content: center;
     align-self: center;
+
     padding: 10px;
     margin-top: 6px;
     border-radius: 25px;
     color: black;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 16px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    height: 500px;
 }
 
 .individual-card small {
@@ -66,27 +65,36 @@
 
 .father-card {
     display: flex;
-    flex-wrap: wrap; /* Permite que os itens sejam distribuídos em várias linhas */
-    gap: var(--gap-father); /* Espaçamento entre os itens */
-    justify-content: space-evenly; 
+    flex-wrap: wrap;
+    /* Permite que os itens sejam distribuídos em várias linhas */
+    gap: var(--gap-father);
+    /* Espaçamento entre os itens */
+    justify-content: space-evenly;
     width: 100%;
     margin: 10px 0;
 }
-.father-card > .individual-card  {
-    flex: 1 1 calc(30.00% - var(--gap-father)); /* 33.33% de largura para até 3 cards por linha, menos o espaçamento */
-    max-width: calc(30.00% - var(--gap-father)); /* Limita a largura máxima de cada card */
-    box-sizing: border-box; /* Inclui padding e border dentro da largura total */
+
+.father-card>.individual-card {
+    flex: 1 1 calc(30.00% - var(--gap-father));
+    /* 33.33% de largura para até 3 cards por linha, menos o espaçamento */
+    max-width: calc(30.00% - var(--gap-father));
+    /* Limita a largura máxima de cada card */
+    box-sizing: border-box;
+    /* Inclui padding e border dentro da largura total */
 }
+
 @media (max-width: 768px) {
-    .father-card > .individual-card {
-        flex: 1 1 calc(50% - var(--gap-father)); /* Ajusta para 2 cards por linha em telas menores */
+    .father-card>.individual-card {
+        flex: 1 1 calc(50% - var(--gap-father));
+        /* Ajusta para 2 cards por linha em telas menores */
         max-width: calc(50% - var(--gap-father));
     }
 }
 
 @media (max-width: 480px) {
-    .father-card > .individual-card {
-        flex: 1 1 calc(100% - var(--gap-father)); /* Ajusta para 1 card por linha em telas muito pequenas */
+    .father-card>.individual-card {
+        flex: 1 1 calc(100% - var(--gap-father));
+        /* Ajusta para 1 card por linha em telas muito pequenas */
         max-width: calc(100% - var(--gap-father));
     }
 }
