--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -61,9 +61,6 @@ div.logo {
 /* Estilo dos botões de envio */
 button[type="submit"] {
     width: 100%;
-    /* background-color: #007bff; 
-    color: white; */
-    padding: 10px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -96,18 +93,20 @@ button[type="submit"] {
 .button-action, .buttons-actions form{
     flex: 1; 
     margin: 0;
-    padding: 5px; 
     min-width: 0;
-    padding: 6px 12px;
     border-radius: 4px;
     font-size: 1.2rem;
-    height: 100%;
+    height: 2rem;
     text-decoration: none;
     text-align: center;
     color: #fff;
     border: none;
     transition: background-color 0.3s;
     
+}
+.card-header{
+    background: none;
+    padding: 0;
 }
 
 @media (max-width: 768px) {
